DevTools: report request bodies if they are blobs

Cloning request turns its body into blob so both instances can refer the
same entity. DevTools need to properly handle such requests and report
body contents.

Bug: 698209
Change-Id: I8c9e719da552d1b7b2371a5d199475b6abed971a